<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context="edu.vccs.email.kcb2464.rpncalculatortest.RPNCalcGUI">

    <TextView
        android:id="@+id/mDisplayView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/m7Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m7Button"
            />
        <Button
            android:id="@+id/m8Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m8Button"
            />
        <Button
            android:id="@+id/m9Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m9Button"
            />
        <Button
            android:id="@+id/mPiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mPiButton"
            />
        <Button
            android:id="@+id/mFSlashButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mFSlashButton"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/m4Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m4Button"
            />
        <Button
            android:id="@+id/m5Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m5Button"
            />
        <Button
            android:id="@+id/m6Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m6Button"
            />
        <Button
            android:id="@+id/mBlankButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mBlankButton"
            />
        <Button
            android:id="@+id/mStarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mStarButton"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/m1Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m1Button"
            />
        <Button
            android:id="@+id/m2Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m2Button"
            />
        <Button
            android:id="@+id/m3Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m3Button"
            />
        <Button
            android:id="@+id/mBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mBackButton"
            />
        <Button
            android:id="@+id/mSubButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mSubButton"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/m0Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m0Button"
            />
        <Button
            android:id="@+id/mDecButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mDecButton"
            />
        <Button
            android:id="@+id/mSignButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mSignButton"
            />
        <Button
            android:id="@+id/mEnterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mEnterButton"
            />
        <Button
            android:id="@+id/mPlusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mPlusButton"
            />
    </LinearLayout>

</LinearLayout>
